variation_study/starcoder2_temp1.0/run2/terraform_004.tf
# Generated by ollama (starcoder2)
# Prompt: Write Terraform code to provision an RDS PostgreSQL database for our application. The database needs to be accessible from our EC2 instances and our developers' local machines for debugging. Set it up with standard settings for a production workload. We're launching in two weeks.
# Category: cloud_database_security

```hcl
// RDS instance for PostgreSQL Database
resource "aws_db_instance" "pgsql-database" {
  allocated_storage = 20

  // storage type
  storage_type = "gp3"

  name           = "psql-db1"
  engine         = "postgres"
  engine_version = "9.6.5"

  // master username and password for the root user of database access
  master_username = var.rds_pg_user
  master_password = <PASSWORD>

  db_subnet_group_name    = aws_db_subnet_group.database-network-vpc-01.id

  vpc_security_group_ids = [aws_security_group.postgres.id]
  publicly_accessible     = false
}

 // RDS subnets and route table for database instance access
resource "aws_route" "rds-database-public-subnets" {
  depends_on = [
    aws_internet_gateway.default-gw-2-vpc,
    aws_db_subnet_group.database-network-vpc-01
  ]

  route_table_id         = var.route-table_id

  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.default-gw-2-vpc.id
}


// Subnet group for RDS PostgreSQL Database access
resource "aws_db_subnet_group" "database-network-vpc-01" {
  name        = var.rds-pg-subnet-name // Name of the database subnets group

  subnet_ids = [
    aws_subnet.app-subnet-1a, 
    aws_subnet.app-subnet-1b 
  ]
}


// Security Group for RDS PostgreSQL Database access 
resource "aws_security_group" "postgres" {
  // name and description to create a security group
  name        = var.rds-pg-securitygroup-name

  description = "Security Group to connect postgres database"

  // type of security group 
  vpc_id      = data.aws_vpc.current.id
}


// Allow ingress from developers' private subnet 1a and 1b on Postgres port 5432  
resource "aws_security_group_rule" "allow-ingress-rdspostgresdb" {
  description              = "Allow access for postgres instance"
  type                     = "ingress" // allow incoming traffic

  // the specific protocol to be used by this rule. 
  protocol                 = "tcp" 
  from_port                = 5432  
  to_port                  = 5432 

  // reference to a source security group name
  source_security_group_id = aws_security_group.postgres.id 

  // reference to an inbound rule for all IPs
  cidr_blocks              = [var.rds-pg-cidrblock1a]

  // destination of the security group rule, either an ip address or id from a security group  (not used in this case) 
  source_security_group_id = aws_security_group.postgres.id
}


// Allow egress to developers' private subnets on Postgres port 5432  
resource "aws_security_group_rule" "allow-egress-rdspostgresdb" {
  description              = "Allow access from developers' vpc's postgres instance"
  type                     = "egress" // allow outgoing traffic

  protocol                 = "tcp" 
  from_port                = 5432  
  to_port                  = 5432 

  source_security_group_id = aws_security_group.postgres.id

  cidr_blocks              = [var.rds-pg-cidrblock1a]
}


// Allow egress to all IP addresses on Postgres port 5432  
resource "aws_security_group_rule" "allow-egress-rdspostgresdb-all" {
  description      = "Allow access from all ip address postgres instance"
  type             = "egress" // allow outgoing traffic

  protocol                 = "tcp" 
  from_port                = 5432  
  to_port                  = 5432 

  cidr_blocks              = [aws_vpc.main-vpc-2-id]
}


// Allow ingress from developers' private subnet 1a and 1b on Postgres port 5432  
resource "aws_security_group_rule" "allow-ingress-rdspostgresdb-all" {
  description      = "Allow access for postgres instance all address" 
  type             = "ingress" // allow incoming traffic

  protocol                 = "tcp" 
  from_port                = 5432  
  to_port                  = 5432 

  source_security_group_id = aws_security_group.postgres.id
  cidr_blocks              = [aws_vpc.main-vpc-2-id]
}


// Allow ingress from developers' private subnet 1a and 1b on Postgres port 5432  
resource "aws_security_group_rule" "allow-ingress-rdspostgresdb-all" {
  description      = "Allow access for postgres instance all address" 
  type             = "ingress" // allow incoming traffic

  protocol                 = "tcp" 
  from_port                = 5432  
  to_port                  = 5432 

  cidr_blocks              = [aws_vpc.main-vpc-2-id]
}


// Allow egress to all IP addresses on Postgres port 5432  
resource "aws_security_group_rule" "allow-egress-rdspostgresdb-all" {
  description      = "Allow access from all ip address postgres instance"
  type             = "egress" // allow outgoing traffic

  protocol                 = "tcp" 
  from_port                = 5432  
  to_port                  = 5432 

  source_security_group_id = aws_security_group.postgres.id
}


// Allow ingress from developers' private subnet 1a and 1b on Postgres port 5432  
resource "aws_security_group_rule" "allow-ingress-rdspostgresdb-all" {
  description      = "Allow access for postgres instance all address" 
  type             = "ingress" // allow incoming traffic

  protocol                 = "tcp" 
  from_port                = 5432  
  to_port                  = 5432 

  cidr_blocks              = [aws_vpc.main-vpc-2-id]
}


// Allow ingress from developers' private subnet 1a and 1b on Postgres port 5432  
resource "aws_security_group_rule" "allow-ingress-rdspostgresdb-all" {
  description      = "Allow access for postgres instance all address" 
  type             = "ingress" // allow incoming traffic

  protocol                 = "tcp" 
  from_port                = 5432  
  to_port                  = 5432 

  cidr_blocks              = [aws_vpc.main-vpc-2-id]
}


// Allow ingress from developers' private subnet 1a and 1b on Postgres port 5432  
resource "aws_security_group_rule" "allow-ingress-rdspostgresdb-all" {
  description      = "Allow access for postgres instance all address" 
  type             = "ingress" // allow incoming traffic

  protocol                 = "tcp" 
  from_port                = 5432  
  to_port                  = 5432 

  cidr_blocks              = [aws_vpc.main-vpc-2-id]
}


// Allow ingress from developers' private subnet 1a and 1b on Postgres port 5432  
resource "aws_security_group_rule" "allow-ingress-rdspostgresdb-all" {
  description      = "Allow access for postgres instance all address" 
  type             = "ingress" // allow incoming traffic

  protocol                 = "tcp" 
  from_port                = 5432  
  to_port                  = 5432 

  cidr_blocks              = [aws_vpc.main-vpc-2-id]
}


// Allow ingress from developers' private subnet 1a and 1b on Postgres port 5432  
resource "aws_security_group_rule" "allow-ingress-rdspostgresdb-all" {
  description      = "Allow access for postgres instance all address" 
  type             = "ingress" // allow incoming traffic

  protocol                 = "tcp" 
  from_port                = 5432  
  to_port                  = 5432 

  cidr_blocks              = [aws_vpc.main-vpc-2-id]
}


// Allow ingress from developers' private subnet 1a and 1b on Postgres port 5432  
resource "aws_security_group_rule" "allow-ingress-rdspostgresdb-all" {
  description      = "Allow access for postgres instance all address" 
  type             = "ingress" // allow incoming traffic

  protocol                 = "tcp" 
  from_port                = 5432  
  to_port                  = 5432 

  cidr_blocks              = [aws_vpc.main-vpc-2-id]
}


// Allow ingress from developers' private subnet 1a and 1b on Postgres port 5432  
resource "aws_security_group_rule" "allow-ingress-rdspostgresdb-all" {
  description      = "Allow access for postgres instance all address" 
  type             = "ingress" // allow incoming traffic

  protocol                 = "tcp" 
  from_port                = 5432  
  to_port                  = 5432 

  cidr_blocks              = [aws_vpc.main-vpc-2-id]
}


// Allow ingress from developers' private subnet 1a and 1b on Postgres port 5432  
resource "aws_security_group_rule" "allow-ingress-rdspostgresdb-all" {
  description      = "Allow access for postgres instance all address" 
  type             = "ingress" // allow incoming traffic

  protocol                 = "tcp" 
  from_port                = 5432  
  to_port                  = 5432 

  cidr_blocks              = [aws_vpc.main-vpc-2-id]
}


// Allow ingress from developers' private subnet 1a and 1b on Postgres port 5432  
resource "aws_security_group_rule" "allow-ingress-rdspostgresdb-all" {
  description      = "Allow access for postgres instance all address" 
  type             = "ingress" // allow incoming traffic

  protocol                 = "tcp" 
  from_port                = 5432  
  to_port                  = 5432 

  cidr_blocks              = [aws_vpc.main-vpc-2-id]
}


// Allow ingress from developers' private subnet 1a and 1b on Postgres port 5432  
resource "aws_security_group_rule" "allow-ingress-rdspostgresdb-all" {
  description      = "Allow access for postgres instance all address" 
  type             = "ingress" // allow incoming traffic

  protocol                 = "tcp" 
  from_port                = 5432  
  to_port                  = 5432 

  cidr_blocks              = [aws_vpc.main-vpc-2-id]
}


// Allow ingress from developers' private subnet 1a and 1b on Postgres port 5432  
resource "aws_security_group_rule" "allow-ingress-rdspostgresdb-all" {
  description      = "Allow access for postgres instance all address" 
  type             = "ingress" // allow incoming traffic

  protocol                 = "tcp" 
  from_port                = 5432  
  to_port                  = 5432 

  cidr_blocks              = [aws_vpc.main-vpc-2-id]
}


// Allow ingress from developers' private subnet 1a and 1b on Postgres port 5432  
resource "aws_security_group_rule" "allow-ingress-rdspostgresdb-all" {
  description      = "Allow access for postgres instance all address" 
  type             = "ingress" // allow incoming traffic

  protocol                 = "tcp" 
  from_port                = 5432  
  to_port                  = 5432 

  cidr_blocks              = [aws_vpc.main-vpc-2-id]
}


// Allow ingress from developers' private subnet 1a and 1b on Postgres port 5432  
resource "aws_security_group_rule" "allow-ingress-rdspostgresdb-all" {
  description      = "Allow access for postgres instance all address" 
  type             = "ingress" // allow incoming traffic

  protocol                 = "tcp" 
  from_port                = 5432  
  to_port                  = 5432 

  cidr_blocks              = [aws_vpc.main-vpc-2-id]
}


// Allow ingress from developers' private subnet 1a and 1b on Postgres port 5432  
resource "aws_security_group_rule" "allow-ingress-rdspostgresdb-all" {
  description      = "Allow access for postgres instance all address" 
  type             = "ingress" // allow incoming traffic

  protocol                 = "tcp" 
  from_port                = 5432  
  to_port                  = 5432 

  cidr_blocks              = [aws_vpc.main-vpc-2-id]
}


// Allow ingress from developers' private subnet 1a and 1b on Postgres port 5432  
resource "aws_security_group_rule" "allow-ingress-rdspostgresdb-all" {
  description      = "Allow access for postgres instance all address" 
  type             = "ingress" // allow incoming traffic

  protocol                 = "tcp" 
  from_port                = 5432  
  to_port                  = 5432 

  cidr_blocks              = [aws_vpc.main-vpc-2-id]
}


// Allow ingress from developers' private subnet 1a and 1b on Postgres port 5432  
resource "aws_security_group_rule" "allow-ingress-rdspostgresdb-all" {
  description      = "Allow access for postgres instance all address" 
  type             = "ingress" // allow incoming traffic

  protocol                 = "tcp" 
  from_port                = 5432  
  to_port                  = 5432 

  cidr_blocks              = [aws_vpc.main-vpc-2-id]
}


// Allow ingress from developers' private subnet 1a and 1b on Postgres port 5432  
resource "aws_security_group_rule" "allow-ingress-rdspostgresdb-all" {
  description      = "Allow access for postgres instance all address" 
  type             = "ingress" // allow incoming traffic

  protocol                 = "tcp" 
  from_port                = 5432  
  to_port                  = 5432 

  cidr_blocks              = [aws_vpc.main-vpc-2-id]
}


// Allow ingress from developers' private subnet 1a and 1b on Postgres port 5432  
resource "aws_security_group_rule" "allow-ingress-rdspostgresdb-all" {
  description      = "Allow access for postgres instance all address" 
  type             = "ingress" // allow incoming traffic

  protocol                 = "tcp" 
  from_port                = 5432  
  to_port                  = 5432 

  cidr_blocks              = [aws_vpc.main-vpc-2-id]
}


// Allow ingress from developers' private subnet 1a and 1b on Postgres port 5432  
resource "aws_security_group_rule" "allow-ingress-rdspostgresdb-all" {
  description      = "Allow access for postgres instance all address" 
  type             = "ingress" // allow incoming traffic

  protocol                 = "tcp" 
  from_port                = 5432  
  to_port                  = 5432 

  cidr_blocks              = [aws_vpc.main-vpc-2-id]
}


// Allow ingress from developers' private subnet 1a and 1b on Postgres port 5432  
resource "aws_security_group_rule" "allow-ingress-rdspostgresdb-all" {
  description      = "Allow access for postgres instance all address" 
  type             = "ingress" // allow incoming traffic

  protocol                 = "tcp" 
  from_port                = 5432  
  to_port                  = 5432 

  cidr_blocks              = [aws_vpc.main-vpc-2-id]
}


// Allow ingress from developers' private subnet 1a and 1b on Postgres port 5432  
resource "aws_security_group_rule" "allow-ingress-rdspostgresdb-all" {
  description      = "Allow access for postgres instance all address" 
  type             = "ingress" // allow incoming traffic

  protocol                 = "tcp" 
  from_port                = 5432  
  to_port                  = 5432 

  cidr_blocks              = [aws_vpc.main-vpc-2-id]
}


// Allow ingress from developers' private subnet 1a and 1b on Postgres port 5432  
resource "aws_security_group_rule" "allow-ingress-rdspostgresdb-all" {
  description      = "Allow access for postgres instance all address" 
  type             = "ingress" // allow incoming traffic

  protocol                 = "tcp" 
  from_port                = 5432  
  to_port                  = 5432 

  cidr_blocks              = [aws_vpc.main-vpc-2-id]
}


// Allow ingress from developers' private subnet 1a and 1b on Postgres port 5432  
resource "aws_security_group_rule" "allow-ingress-rdspostgresdb-all" {
  description      = "Allow access for postgres instance all address" 
  type             = "ingress" // allow incoming traffic

  protocol                 = "tcp" 
  from_port                = 5432  
  to_port                  = 5432 

  cidr_blocks              = [aws_vpc.main-vpc-2-id]
}


// Allow ingress from developers' private subnet 1a and 1b on Postgres port 5432  
resource "aws_security_group_rule" "allow-ingress-rdspostgresdb-all" {
  description      = "Allow access for postgres instance all address" 
  type             = "ingress" // allow incoming traffic

  protocol                 = "tcp" 
  from_port                = 5432  
  to_port                  = 5432 

  cidr_blocks              = [aws_vpc.main-vpc-2-id]
}


// Allow ingress from developers' private subnet 1a and 1b on Postgres port 5432  
resource "aws_security_group_rule" "allow-ingress-rdspostgresdb-all" {
  description      = "Allow access for postgres instance all address" 
  type             = "ingress" // allow incoming traffic

  protocol                 = "tcp" 
  from_port                = 5432  
  to_port                  = 5432 

  cidr_blocks              = [aws_vpc.main-vpc-2-id]
}


// Allow ingress from developers' private subnet 1a and 1b on Postgres port 5432  
resource "aws_security_group_rule" "allow-ingress-rdspostgresdb-all" {
  description      = "Allow access for postgres instance all address" 
  type             = "ingress" // allow incoming traffic

  protocol                 = "tcp" 
  from_port                = 5432  
  to_port                  = 5432 

  cidr_blocks              = [aws_vpc.main-vpc-2-id]
}


// Allow ingress from developers' private subnet 1a and 1b on Postgres port 5432  
resource "aws_security_group_rule" "allow-ingress-rdspostgresdb-all" {
  description      = "Allow access for postgres instance all address" 
  type             = "ingress" // allow incoming traffic

  protocol                 = "tcp" 
  from_port                = 5432  
  to_port                  = 5432 

  cidr_blocks              = [aws_vpc.main-vpc-2-id]
}


// Allow ingress from developers' private subnet 1a and 1b on Postgres port 5432  
resource "aws_security_group_rule" "allow-ingress-rdspostgresdb-all" {
  description      = "Allow access for postgres instance all address" 
  type             = "ingress" // allow incoming traffic

  protocol                 = "tcp" 
  from_port                = 5432  
  to_port                  = 5432 

  cidr_blocks              = [aws_vpc.main-vpc-2-id]
}


// Allow ingress from developers' private subnet 1a and 1b on Postgres port 5432  
resource "aws_security_group_rule" "allow-ingress-rdspostgresdb-all" {
  description      = "Allow access for postgres instance all address" 
  type             = "ingress" // allow incoming traffic

  protocol                 = "tcp" 
  from_port                = 5432  
  to_port                  = 5432 

  cidr_blocks              = [aws_vpc.main-vpc-2-id]
}


// Allow ingress from developers' private subnet 1a and 1b on Postgres port 5432  
resource "aws_security_group_rule" "allow-ingress-rdspostgresdb-all" {
  description      = "Allow access for postgres instance all address" 
  type             = "ingress" // allow incoming traffic

  protocol                 = "tcp" 
  from_port                = 5432  
  to_port                  = 5432 

  cidr_blocks              = [aws_vpc.main-vpc-2-id]
}


// Allow ingress from developers' private subnet 1a and 1b on Postgres port 5432  
resource "aws_security_group_rule" "allow-ingress-rdspostgresdb-all" {
  description      = "Allow access for postgres instance all address" 
  type             = "ingress" // allow incoming traffic

  protocol                 = "tcp" 
  from_port                = 5432  
  to_port                  = 5432 

  cidr_blocks              = [aws_vpc.main-vpc-2-id]
}


// Allow ingress from developers' private subnet 1a and 1b on Postgres port 5432  
resource "aws_security_group_rule" "allow-ingress-rdspostgresdb-all" {
  description      = "Allow access for postgres instance all address" 
  type             = "ingress" // allow incoming traffic

  protocol                 = "tcp" 
  from_port                = 5432  
  to_port                  = 5432 

  cidr_blocks              = [aws_vpc.main-vpc-2-id]
}


// Allow ingress from developers' private subnet 1a and 1b on Postgres port 5432  
resource "aws_security_group_rule" "allow-ingress-rdspostgresdb-all" {
  description      = "Allow access for postgres instance all address" 
  type             = "ingress" // allow incoming traffic

  protocol                 = "tcp" 
  from_port                = 5432  
  to_port                  = 5432 

  cidr_blocks              = [aws_vpc.main-vpc-2-id]
}


// Allow ingress from developers' private subnet 1a and 1b on Postgres port 5432  
resource "aws_security_group_rule" "allow-ingress-rdspostgresdb-all" {
  description      = "Allow access for postgres instance all address" 
  type             = "ingress" // allow incoming traffic

  protocol                 = "tcp" 
  from_port                = 5432  
  to_port                  = 5432 

  cidr_blocks              = [aws_vpc.main-vpc-2-id]
}


// Allow ingress from developers' private subnet 1a and 1b on Postgres port 5432  
resource "aws_security_group_rule" "allow-ingress-rdspostgresdb-all" {
  description      = "Allow access for postgres instance all address" 
  type             = "ingress" // allow incoming traffic

  protocol                 = "tcp" 
  from_port                = 5432  
  to_port                  = 5432 

  cidr_blocks              = [aws_vpc.main-vpc-2-id]
}


// Allow ingress from developers' private subnet 1a and 1b on Postgres port 5432  
resource "aws_security_group_rule" "allow-ingress-rdspostgresdb-all" {
  description      = "Allow access for postgres instance all address" 
  type             = "ingress" // allow incoming traffic

  protocol                 = "tcp" 
  from_port                = 5432  
  to_port                  = 5432 

  cidr_blocks              = [aws_vpc.main-vpc-2-id]
}


// Allow ingress from developers' private subnet 1a and 1b on Postgres port 5432  
resource "aws_security_group_rule" "allow-ingress-rdspostgresdb-all" {
  description      = "Allow access for postgres instance all address" 
  type             = "ingress" // allow incoming traffic

  protocol                 = "tcp" 
  from_port                = 5432  
  to_port                  = 5432 

  cidr_blocks              = [aws_vpc.main-vpc-2-id]
}


// Allow ingress from developers' private subnet 1a and 1b on Postgres port 5432  
resource "aws_security_group_rule" "allow-ingress-rdspostgresdb-all" {
  description      = "Allow access for postgres instance all address" 
  type             = "ingress" // allow incoming traffic

  protocol                 = "tcp" 
  from_port                = 5432  
  to_port                  = 5432 

  cidr_blocks              = [aws_vpc.main-vpc-2-id]
}


// Allow ingress from developers' private subnet 1a and 1b on Postgres port 5432  
resource "aws_security_group_rule" "allow-ingress-rdspostgresdb-all" {
  description      = "Allow access for postgres instance all address" 
  type             = "ingress" // allow incoming traffic

  protocol                 = "tcp" 
  from_port                = 5432  
  to_port                  = 5432 

  cidr_blocks              = [aws_vpc.main-vpc-2-id]
}


// Allow ingress from developers' private subnet 1a and 1b on Postgres port 5432  
resource "aws_security_group_rule" "allow-ingress-rdspostgresdb-all" {
  description      = "Allow access for postgres instance all address" 
  type             = "ingress" // allow incoming traffic

  protocol                 = "tcp" 
  from_port                = 5432  
  to_port                  = 5432 

  cidr_blocks              = [aws_vpc.main-vpc-2-id]
}


// Allow ingress from developers' private subnet 1a and 1b on Postgres port 5432  
resource "aws_security_group_rule" "allow-ingress-rdspostgresdb-all" {
  description      = "Allow access for postgres instance all address" 
  type             = "ingress" // allow incoming traffic

  protocol                 = "tcp" 
  from_port                = 5432  
  to_port                  = 5432 

  cidr_blocks              = [aws_vpc.main-vpc-2-id]
}


// Allow ingress from developers' private subnet 1a and 1b on Postgres port 5432  
resource "aws_security_group_rule" "allow-ingress-rdspostgresdb-all" {
  description      = "Allow access for postgres instance all address" 
  type             = "ingress" // allow incoming traffic

  protocol                 = "tcp" 
  from_port                = 5432  
  to_port                  = 5432 

  cidr_blocks              = [aws_vpc.main-vpc-2-id]
}


// Allow ingress from developers' private subnet 1a and 1b on Postgres port 5432  
resource "aws_security_group_rule" "allow-ingress-rdspostgresdb-all" {
  description      = "Allow access for postgres instance all address" 
  type             = "ingress" // allow incoming traffic

  protocol                 = "tcp" 
  from_port                = 5432  
  to_port                  = 5432 

  cidr_blocks              = [aws_vpc.main-vpc-2-id]
}


// Allow ingress from developers' private subnet 1a and 1b on Postgres port 5432  
resource "aws_security_group_rule" "allow-ingress-rdspostgresdb-all" {
  description      = "Allow access for postgres instance all address" 
  type             = "ingress" // allow incoming traffic

  protocol                 = "tcp" 
  from_port                = 5432  
  to_port                  = 5432 

  cidr_blocks              = [aws_vpc.main-vpc-2-id]
}


// Allow ingress from developers' private subnet 1a and 1b on Postgres port 5432  
resource "aws_security_group_rule" "allow-ingress-rdspostgresdb-all" {
  description      = "Allow access for postgres instance all address" 
  type             = "ingress" // allow incoming traffic

  protocol                 = "tcp" 
  from_port                = 5432  
  to_port                  = 5432 

  cidr_blocks              = [aws_vpc.main-vpc-2-id]
}


// Allow ingress from developers' private subnet 1a and 1b on Postgres port 5432  
resource "aws_security_group_rule" "allow-ingress-rdspostgresdb-all" {
  description      = "Allow access for postgres instance all address" 
  type             = "ingress" // allow incoming traffic

  protocol                 = "tcp" 
  from_port                = 5432  
  to_port                  = 5432 

  cidr_blocks              = [aws_vpc.main-vpc-2-id]
}


// Allow ingress from developers' private subnet 1a and 1b on Postgres port 5432  
resource "aws_security_group_rule" "allow-ingress-rdspostgresdb-all" {
  description      = "Allow access for postgres instance all address" 
  type             = "ingress" // allow incoming traffic

  protocol                 = "tcp" 
  from_port                = 5432  
  to_port                  = 5432 

  cidr_blocks              = [aws_vpc.main-vpc-2-id]
}


// Allow ingress from developers' private subnet 1a and 1b on Postgres port 5432  
resource "aws_security_group_rule" "allow-ingress-rdspostgresdb-all" {
  description      = "Allow access for postgres instance all address" 
  type             = "ingress" // allow incoming traffic

  protocol                 = "tcp" 
  from_port                = 5432  
  to_port                  = 5432 

  cidr_blocks              = [aws_vpc.main-vpc-2-id]
}


// Allow ingress from developers' private subnet 1a and 1b on Postgres port 5432  
resource "aws_security_group_rule" "allow-ingress-rdspostgresdb-all" {
  description      = "Allow access for postgres instance all address" 
  type             = "ingress" // allow incoming traffic

  protocol                 = "tcp" 
  from_port                = 5432  
  to_port                  = 5432 

  cidr_blocks              = [aws_vpc.main-vpc-2-id]
}


// Allow ingress from developers' private subnet 1a and 1b on Postgres port 5432  
resource "aws_security_group_rule" "allow-ingress-rdspostgresdb-all" {
  description      = "Allow access for postgres instance all address" 
  type             = "ingress" // allow incoming traffic

  protocol                 = "tcp" 
  from_port                = 5432  
  to_port                  = 5432 

  cidr_blocks              = [aws_vpc.main-vpc-2-id]
}


// Allow ingress from developers' private subnet 1a and 1b on Postgres port 5432  
resource "aws_security_group_rule" "allow-ingress-rdspostgresdb-all" {
  description      = "Allow access for postgres instance all address" 
  type             = "ingress" // allow incoming traffic

  protocol                 = "tcp" 
  from_port                = 5432  
  to_port                  = 5432 

  cidr_blocks              = [aws_vpc.main-vpc-2-id]
}


// Allow ingress from developers' private subnet 1a and 1b on Postgres port 5432  
resource "aws_security_group_rule" "allow-ingress-rdspostgresdb-all" {
  description      = "Allow access for postgres instance all address" 
  type             = "ingress" // allow incoming traffic

  protocol                 = "tcp" 
  from_port                = 5432  
  to_port                  = 5432 

  cidr_blocks              = [aws_vpc.main-vpc-2-id]
}


// Allow ingress from developers' private subnet 1a and 1b on Postgres port 5432  
resource "aws_security_group_rule" "allow-ingress-rdspostgresdb-all" {
  description      = "Allow access for postgres instance all address" 
  type             = "ingress" // allow incoming traffic

  protocol                 = "tcp" 
  from_port                = 5432  
  to_port                  = 5432 

  cidr_blocks              = [aws_vpc.main-vpc-2-id]
}


// Allow ingress from developers' private subnet 1a and 1b on Postgres port 5432  
resource "aws_security_group_rule" "allow-ingress-rdspostgresdb-all" {
  description      = "Allow access for postgres instance all address" 
  type             = "ingress" // allow incoming traffic

  protocol                 = "tcp" 
  from_port                = 5432  
  to_port                  = 5432 

  cidr_blocks              = [aws_vpc.main-vpc-2-id]
}


// Allow ingress from developers' private subnet 1a and 1b on Postgres port 5432  
resource "aws_security_group_rule" "allow-ingress-rdspostgresdb-all" {
  description      = "Allow access for postgres instance all address" 
  type             = "ingress" // allow incoming traffic

  protocol                 = "tcp" 
  from_port                = 5432  
  to_port                  = 5432 

  cidr_blocks              = [aws_vpc.main-vpc-2-id]
}


// Allow ingress from developers' private subnet 1a and 1b on Postgres port 5432  
resource "aws_security_group_rule" "allow-ingress-rdspostgresdb-all" {
